fix: ensure button text visible

--- a/src/Components/layout.module.css
+++ b/src/Components/layout.module.css
@@ -101,6 +101,7 @@ button {
   margin-top: 10px;
   border-radius: 0;
   background-color: white;
+  color: #222;
   border: solid 2px grey;
 }
 
